# FintexAI

./: .env.test  .gitignore  main.py  pyproject.toml  pytest.ini
app/core/: config.py  exceptions.py  handlers.py  hashing.py  lifespan.py  mail.py  security.py
app/db/: imports.py  lifespan.py  session.py
app/db/postgres/: engine.py  session.py
app/db/redis/: redis.py
app/features/auth/: dependencies.py  router.py  service.py
app/features/categories/: models.py  repo.py  router.py  schemas.py  service.py
app/features/transactions/: models.py  repo.py  router.py  schemas.py
app/features/users/: models.py  schemas.py
app/features/wallets/: models.py  repo.py  router.py  schemas.py  service.py
app/mocks/: fake_db.py
migrations/: env.py
migrations/versions/: 4e374833b80c_о.py  c31ebfbad748_init_model_wallet.py
seeds/: products_seed.py
tests/: conftest.py  mail_test.py  mailer.py  test_routes.py
tests/wallets/: test_api.py
